<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/text_header_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_header_reply"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:visibility="invisible"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_message_reply"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_header_reply"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:visibility="invisible"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/button_main"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/button_main"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="launchSecondActivity"
            style="@style/AppTheme.Button"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toStartOf="@+id/button_main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textLongMessage"
                android:ems="10"
                android:hint="@string/editText_main"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>